# monorobot

./: .gitignore  .monorobot.json  bar.txt  foo.txt  monorobot.opam
documentation/: config_docs.md
lib/: action.ml  api.ml  api_local.ml  api_remote.ml  config.atd  context.ml  dune  github.atd  github.ml  mrkdwn.ml  slack.ml  slack_message.ml
mock_payloads/: issue_comment.created_in_issue_by_ignored.json
src/: dune  monorobot.ml
test/: dune  github_link_test.ml  slack_payloads.expected  test.ml
