(library
 (name lib)
 (libraries
  atdgen
  atdgen-runtime
  base
  base64
  base.caml
  biniou
  cstruct
  curl
  curl.lwt
  devkit
  devkit.core
  extlib
  hex
  lwt
  lwt.unix
  nocrypto
  omd
  re2
  sexplib0
  slack.lib
  stdio
  uri
  yojson)
 (preprocess
  (pps lwt_ppx)))

(vendored_dirs slack)

(rule
 (targets common_t.ml common_t.mli)
 (deps common.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets common_j.ml common_j.mli)
 (deps common.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets github_t.ml github_t.mli)
 (deps github.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets github_j.ml github_j.mli)
 (deps github.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets rule_t.ml rule_t.mli)
 (deps rule.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets rule_j.ml rule_j.mli)
 (deps rule.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets config_t.ml config_t.mli)
 (deps config.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets state_t.ml state_t.mli)
 (deps state.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets state_j.ml state_j.mli)
 (deps state.atd)
 (action
  (run atdgen -j -j-std %{deps})))
